test/bad/dup_var_def.dws
void main() {
	int a = 666
	print(a)
	double a = 1
}
